# ferritin

./: .dockerignore  .gitattributes  .gitignore  AMBER_UPDATE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEOMETRIC_DL_INFRA_ROADMAP.md  LICENSE  NEXT_SESSION.md  NEXT_STEPS.md  README.md  RELIABILITY_ROADMAP.md  ROADMAP.md  RUST_BATCH_SUPERVISION_CONTRACT.md  STRUCTURE_SUPERVISION_SCHEMA.md  THIRD_PARTY_NOTICES.md
benchmark/: diagnose_bucket_a.py  diagnose_convergence.py  diagnose_stubborn.py  find_slow_prepare.py  run_benchmark.py  stage1_smoke.py
devdocs/: GEOMETRIC_DL_INFRA_ROADMAP.md  ORACLE.md  RELIABILITY_ROADMAP.md  RUST_BATCH_SUPERVISION_CONTRACT.md  SEARCH_ROADMAP.md  STRUCTURE_SUPERVISION_SCHEMA.md  TODO_NEXT.md
docs/: ORACLE_SETUP.md  WHY.md
evident/: CAPTURE_SCHEMA.md  Dockerfile  Dockerfile.cuda  evident.yaml
examples/: 01_load_and_explore.py  02_structural_alignment.py  03_contact_map.py  04_ramachandran.py  05_sasa_analysis.py  06_geometric_dl_pipeline.py  07_bfactor_prediction.py  08_interface_residues.py  09_structure_similarity.py  10_corpus_release_smoke.py  11_search_db_persistence.py
ferritin-align/: Cargo.toml
ferritin-arrow/: Cargo.toml
ferritin-arrow/src/: atom.rs  convert.rs  lib.rs  reader.rs  writer.rs
ferritin-arrow/tests/: edge_cases.rs  roundtrip.rs
ferritin-bin/: Cargo.toml
ferritin-connector/: Cargo.toml  README.md  pyproject.toml
ferritin-io/: Cargo.toml
ferritin-search/: Cargo.toml
gpu-poc/: Cargo.toml
proteon-connector/: pyproject.toml
tests/: README.md  conftest.py  test_alignment.py  test_amber_invariants.py  test_analysis.py  test_charmm_invariants.py  test_corpus_release.py  test_corpus_release_real_pdb.py  test_corpus_smoke.py  test_corpus_smoke_chunked.py  test_corpus_smoke_msa_wiring.py  test_cross_path_parity.py  test_dump_topology_obc.py  test_evident_runner_contract.py  test_failure_taxonomy.py  test_foldseek_retrieval_report.py  test_forcefield.py  test_geometry.py  test_golden_snapshots.py  test_hbond.py  test_io_rescue.py  test_loader_failure_analysis.py  test_mmalign.py  test_msa.py  test_msa_io.py  test_multi_retrieval_report.py  test_pdb_io.py  test_prepare.py  test_prepared_manifest.py  test_public_api_surface.py  test_sasa.py  test_search_index.py  test_select.py  test_sequence_example.py  test_sequence_parquet_streaming.py  test_sequence_retrieval_bench.py  test_split_strategies.py  test_supervision.py  test_supervision_parquet_streaming.py  test_supervision_rust_parity.py  (+4 more)
validation/: amber96_obc_oracle.py  amber96_oracle.py  amber96_oracle_triangulate.py  batch_fold.py  bench_alignment.py  bench_foldseek.py  bench_foldseek_retrieval.py  bench_sequence_retrieval.py  charmm19_eef1_ball_oracle.py  diag_obc_params.py  download_pdbs.py  first_real_search_release.py  fold_with_proteon_features.py  foldseek_ferritin_5k_50q_union50.report.json  foldseek_ferritin_5k_50q_union50.report.md  foldseek_retrieval_bench_120x8_exhaustive_3di_top10.json  foldseek_retrieval_bench_120x8_permissive_top10.json  generate_report.py  msa_oracle.py  (+50 more)
(+372 files in other folders)
