[package]
name = "ferritin-arrow"
version.workspace = true
edition.workspace = true
description = "Arrow RecordBatch output for ferritin — zero-copy structural data export"

[dependencies]
ferritin-io = { path = "../ferritin-io" }
ferritin-align = { path = "../ferritin-align" }
pdbtbx = { git = "https://github.com/douweschulte/pdbtbx", branch = "main" }
arrow = { version = "54", default-features = false }
parquet = { version = "54", optional = true }
anyhow = "1"

[features]
default = ["parquet"]
